important fixes for landing page on mobile

--- a/front/css/style.css
+++ b/front/css/style.css
@@ -108,7 +108,7 @@ h1
 {
     display: inline-block;
     vertical-align: top;
-    width: 390px;
+    max-width: 390px;
     padding: 10px;
 }
 
@@ -119,7 +119,7 @@ h1
 
 .questions
 {
-    width: 500px;
+    max-width: 500px;
     margin: auto;
     background-color: rgba(255,255,255,0.5);
     padding: 20px;
